# MLX-Benchmark

./: .gitignore  README.md  models.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
mlx_benchmark/: __init__.py  cli.py  dataset.py  export.py  judge.py  prompts.py  runner.py
mlx_benchmark/backends/: __init__.py  anthropic_backend.py  base.py  ollama_backend.py  openai_compat_backend.py
mlx_benchmark/data/: DATASET_CARD.md  dataset_v2.jsonl
